msm8960: Don't show color temp setting if not supported
Change-Id: I7e499c852db9db892a89dcf7f377dbc5cd9ddfd9

--- a/DeviceSettings/res/xml/mdnie_preferences.xml
+++ b/DeviceSettings/res/xml/mdnie_preferences.xml
@@ -46,7 +46,7 @@
             android:defaultValue="false" />
     <!-- Panel color temperature mode -->
     <com.cyanogenmod.settings.device.PanelColorTemperature
-            android:key="panel_color_value"
+            android:key="panel_color_temperature"
             android:title="@string/panel_color_temp_title_head"
             android:summary="@string/panel_color_temp_summary_head"
             android:entries="@array/panel_color_temp_entries"
