msm8960: Add support for MDNIE auto mode and make it default
 * Only JF supports MDNIE mode setting, and dynamic mode is not ideal.

Change-Id: Iecf20c6ffc62399938ee8f9a7604c2eacb19537e

--- a/DeviceSettings/res/values/arrays.xml
+++ b/DeviceSettings/res/values/arrays.xml
@@ -21,13 +21,15 @@
     </string-array>
 
     <string-array name="mdnie_mode_entries">
-        <item>Standard (Default)</item>
+        <item>Auto</item>
+        <item>Standard</item>
         <item>Dynamic</item>
         <item>Natural</item>
         <item>Movie</item>
     </string-array>
 
     <string-array name="mdnie_mode_entries_values" translatable="false">
+        <item>4</item>
         <item>1</item>
         <item>0</item>
         <item>2</item>
