--- a/DeviceSettings/res/values/arrays.xml
+++ b/DeviceSettings/res/values/arrays.xml
@@ -1,5 +1,19 @@
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (C) 2012-2013 The CyanogenMod Project
 
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+
+          http://www.apache.org/licenses/LICENSE-2.0
+
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+-->
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string-array name="mdnie_scenario_entries">
         <item>UI</item>
         <item>Video</item>
@@ -9,7 +23,6 @@
         <item>VT</item>
         <item>Bypass</item>
     </string-array>
-
     <string-array name="mdnie_scenario_entries_values" translatable="false">
         <item>0</item>
         <item>1</item>
@@ -19,7 +32,6 @@
         <item>7</item>
         <item>8</item>
     </string-array>
-
     <string-array name="mdnie_mode_entries">
         <item>Auto</item>
         <item>Standard</item>
@@ -27,7 +39,6 @@
         <item>Natural</item>
         <item>Movie</item>
     </string-array>
-
     <string-array name="mdnie_mode_entries_values" translatable="false">
         <item>4</item>
         <item>1</item>
@@ -35,17 +46,14 @@
         <item>2</item>
         <item>3</item>
     </string-array>
-
     <string-array name="panel_gamma_entries">
         <item>2.2 (Default)</item>
         <item>1.9</item>
     </string-array>
-
     <string-array name="panel_gamma_entries_values" translatable="false">
         <item>0</item>
         <item>1</item>
     </string-array>
-
     <string-array name="touchscreen_sensitivity_entries">
         <item>10</item>
         <item>20</item>
@@ -54,7 +62,6 @@
         <item>70</item>
         <item>100</item>
     </string-array>
-
     <string-array name="touchscreen_sensitivity_entries_values" translatable="false">
         <item>10</item>
         <item>20</item>
@@ -63,7 +70,6 @@
         <item>70</item>
         <item>100</item>
     </string-array>
-
     <string-array name="vibrator_intensity_entries">
         <item>0%</item>
         <item>25%</item>
@@ -71,7 +77,6 @@
         <item>75%</item>
         <item>100%</item>
     </string-array>
-
     <string-array name="vibrator_intensity_entries_values" translatable="false">
         <item>0</item>
         <item>25</item>
@@ -79,7 +84,6 @@
         <item>75</item>
         <item>100</item>
     </string-array>
-
     <string-array name="panel_color_temp_entries" >
         <item>Cold</item>
         <item>Cool</item>
@@ -87,7 +91,6 @@
         <item>Warm</item>
         <item>Hot</item>
     </string-array>
-
     <string-array name="panel_color_temp_entries_values" translatable="false">
         <item>0</item>
         <item>1</item>
