Samsung/msm8960-common: FR translation
Change-Id: I65837dac465827c4ef764643144e77a0cd046a02

--- a/DeviceSettings/res/values-fr/arrays.xml
+++ b/DeviceSettings/res/values-fr/arrays.xml
@@ -25,6 +25,7 @@
         <item>VT</item>
     </string-array>
     <string-array name="mdnie_mode_entries">
+        <item>Automatique</item>
         <item>Standard (Par défaut)</item>
         <item>Dynamique</item>
         <item>Naturel</item>
